<resources>
    <string name="app_name">VkSharePhotoApp</string>
    <string name="share_main_string">Делитесь фотографиями</string>
    <string name="share_second_string">Поделитесь фотографией на стене, \n и добавьте к ней описание.</string>
    <string name="share_button_text">Выбрать фото</string>

    <string name="share_photo_selected_main">Поделиться на стене</string>
    <string name="share_photo_selected_input_text">Добавить комментарий</string>
    <string name="share_photo_selected_send_text">Отправить</string>

    <integer name="com_vk_sdk_AppId">7328948</integer>
</resources>
