<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:background="@color/colorWhite"
    android:id="@+id/main_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">
    <android.support.constraint.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            android:id="@+id/share_png"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:background="@drawable/share_png"/>
        <TextView
            app:layout_constraintTop_toBottomOf="@id/share_png"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            android:id="@+id/text_share_main"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000000"
            android:gravity="center"
            android:text="@string/share_main_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            app:layout_constraintTop_toBottomOf="@id/text_share_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            android:id="@+id/text_share_second"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="#818C99"
            android:gravity="center"
            android:text="@string/share_second_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            app:layout_constraintTop_toBottomOf="@id/text_share_second"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            android:id="@+id/buttonSelectPhoto"
            android:textAllCaps="false"
            android:text="@string/share_button_text"
            android:textSize="15sp"
            android:textColor="#ffffff"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_select"
            android:layout_width="135dp"
            android:layout_height="36dp" />
    </android.support.constraint.ConstraintLayout>

    <include
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/frame_layout_selected_photo"/>

</android.support.constraint.ConstraintLayout>