<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/second_constraint_layout"
    android:background="@drawable/background_selected_photo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:id="@+id/text_share_main"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#000000"
        android:gravity="center"
        android:text="@string/share_photo_selected_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        app:layout_constraintTop_toTopOf="@id/text_share_main"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginEnd="12dp"
        android:layout_width="24dp"
        android:layout_height="24dp" />
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/text_share_main"

        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:maxLines="5"
            android:hint="@string/share_photo_selected_input_text"
            android:padding="12dp"
            android:inputType="textMultiLine"
            android:id="@+id/edit_text"
            android:textColor="#818C99"
            android:minHeight="36dp"
            android:textSize="16sp"
            android:background="@drawable/background_selected_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.CardView
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            app:cardCornerRadius="8dp"
            android:layout_width="match_parent"
            android:layout_height="218dp">
            <ScrollView
                android:id="@+id/scrollView"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:adjustViewBounds="true"
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </ScrollView>
        </android.support.v7.widget.CardView>
        <Button
            android:id="@+id/buttonSend"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:text="@string/share_photo_selected_send_text"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_select"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="44dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>